--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.security.user.name=user
 spring.security.user.password=password123
-spring.security.user.roles=USER
+spring.security.user.roles=ADMIN
 
